# Interview_preparation

./: Jenkinsfile  README.md
Algo_Expert/: Remove_kth_node_from_end.py  array_of_product.py  balanced_brackets.py  best_digits.py  best_seat.py  binary_search.py  binary_search_tree_construction.py  binary_tree.py  blackjack_probability.py  breadth_first_search.py  bubble_sort.py  caesar_cypher_encryptor.py  class_photos.py  closest_value_in_BST.py  colliding_asteroids.py  common_characters.py  doublee_linked_list_construction.py  find_kth_largest_value_in_bst.py  find_nodes_distance_k.py  find_successor_bst.py  first_non_repeating_character.py  generate_document.py  height_balanaced_binary_tree.py  insertion_Sort.py  kadane's_algorithm.py  linked_list_middle_node.py  linked_list_remove_duplicates.py  longest_peak.py  majority_element.py  nth_fibonacci.py  (+43 more)
Projects/Data_Engineering/HospitalManagementSystem/: README.md  docker-compose.yml  fake.py  log.py  main.py  pyproject.toml
Projects/Data_Engineering/HospitalManagementSystem/Process/: processor.py
Projects/Data_Engineering/HospitalManagementSystem/UI/: starlett_frontend.py
Projects/Data_Engineering/HospitalManagementSystem/api/: dbcon.py
Projects/Data_Engineering/HospitalManagementSystem/api/db/: db.py
Projects/Data_Engineering/HospitalManagementSystem/api/response_schema/: patient_registration.py
Projects/Data_Engineering/HospitalManagementSystem/api/routes/: patient_registration_routes.py
Projects/Data_Engineering/HospitalManagementSystem/api/services/: __init__.py  patient_registration_service.py
Projects/Data_Engineering/HospitalManagementSystem/kafka/: kafka.py
Projects/Middleware/AuthenticationAuthorization/: log.py  main.py  main_provider_auth.py  main_up_auth.py  products.py  pyproject.toml
(+720 files in other folders)
